# RC2021

./: README.md
devel/: .catkin  setup.sh
devel/include/mv_driver/: raw_img.h
devel/include/rcnn_ros/: con.h  detection.h  point.h  points.h  results.h
devel/lib/mv_driver/: mv_driver_node
devel/lib/pkgconfig/: cv_bridge.pc  mv_driver.pc  rcnn_ros.pc  video_pub.pc
devel/lib/python2.7/dist-packages/cv_bridge/: __init__.py
devel/lib/python2.7/dist-packages/mv_driver/msg/: __init__.py  _raw_img.py
devel/lib/python2.7/dist-packages/rcnn_ros/msg/: __init__.py  _con.py  _detection.py  _point.py  _points.py  _results.py
devel/lib/rcnn_ros/: rcnn_ros_node
devel/lib/video_pub/: video_pub_node
devel/share/common-lisp/ros/mv_driver/msg/: _package.lisp  _package_raw_img.lisp  mv_driver-msg.asd  raw_img.lisp
devel/share/mv_driver/cmake/: mv_driver-msg-paths.cmake  mv_driverConfig.cmake
devel/share/rcnn_ros/cmake/: rcnn_ros-msg-extras.cmake  rcnn_ros-msg-paths.cmake  rcnn_rosConfig.cmake
devel/share/roseus/ros/mv_driver/: manifest.l
devel/share/roseus/ros/rcnn_ros/: manifest.l
devel/share/video_pub/cmake/: video_pubConfig.cmake
src/msg/: detection.msg
src/mv_driver/: CMakeLists.txt  package.xml
src/mv_driver/src/: code_backup.txt  mv_driver.cpp
src/rcnn_ros/: CMakeLists.txt  package.xml
src/rcnn_ros/msg/: detection.msg  results.msg
src/rcnn_ros/src/: BatchedNms.cu  MaskRcnnInference.cu  PredictorDecode.cu  RoiAlign.cu  RpnDecode.cu  RpnNms.cu  rcnn.cpp
src/video_pub/: CMakeLists.txt
src/video_pub/src/: video_pub.cpp
(+25 files in other folders)
